# chai-code-superstore-analysis

./: .gitignore  README.md  SuperStore_Cleaned_Final.csv  Superstore-Sales-Case-Study.ipynb  app.py  main.py  pyproject.toml
plots/: 11-May_ NumPy in Depth
